--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -79,12 +79,17 @@ section h3 {
   padding-left: 20px;
   list-style-type: disc;
   color: #555;
+  background-color: #f1f1f1;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ddd;
 }
 
 .activity-card ul li {
   margin-bottom: 5px;
   font-size: 14px;
   line-height: 1.4;
+  color: #333;
 }
 
 .form-group {
